Added dashboard repository.
