# backend/src/controllers/index.ts
@@ -6,3 +6,4 @@ export * from './brand.controller';
 export * from './product.controller';
 export * from './customer.controller';
 export * from './invoice.controller';
+export * from './dashboard.controller';
